source/extensions/dynamic_modules/sdks/go/example/envoy.yaml
static_resources:
  listeners:
    - name: staticreply
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 8099
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      response_headers_to_add:
                      - header:
                          key: "this-is"
                          value: "response-header"
                      - header:
                          key: "this-is-2"
                          value: "A"
                      - header:
                          key: "this-is-2"
                          value: "B"
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 200
                            body:
                              inline_string: "example body\n"
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    - name: listener_15000
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 15000
      filter_chains:
        - name: http
          filters:
            - name: http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: test
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: staticreply
                http_filters:
                  ######################################################################################################
                  - name: envoy.http.dynamic_modules
                    typed_config:
                      # Schema is defined at https://github.com/mathetake/envoy-dynamic-modules/blob/main/x/config.proto
                      "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleConfig
                      # The name is *optional* and is only used for logging by Envoy, not for modules.
                      name: test
                      # The file_path is the path to the shared object file. We share the same file for both http filter chain.
                      file_path: main.so
                      # This is passed to newHttpFilter in main.go
                      filter_config: "helloworld"
                      # Since c-shared modules by the Go compiler toolchain do not support dlclose, https://github.com/golang/go/issues/11100
                      # we need to set do_not_dlclose to true to avoid the crash.
                      do_not_dlclose: true
                  ######################################################################################################
                  - name: router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    - name: listener_15001
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 15001
      filter_chains:
        - name: http
          filters:
            - name: http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: test
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: staticreply
                http_filters:
                  ######################################################################################################
                  - name: envoy.http.dynamic_modules
                    typed_config:
                      # Schema is defined at https://github.com/mathetake/envoy-dynamic-modules/blob/main/x/config.proto
                      "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleConfig
                      # The file_path is the path to the shared object file. We share the same file for both http filter chain.
                      file_path: main.so
                      # This is passed to newHttpFilter in main.go
                      filter_config: "delay"
                      # Since c-shared modules by the Go compiler toolchain do not support dlclose, https://github.com/golang/go/issues/11100
                      # we need to set do_not_dlclose to true to avoid the crash.
                      do_not_dlclose: true
                  ######################################################################################################
                  - name: router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    - name: listener_15002
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 15002
      filter_chains:
        - name: http
          filters:
            - name: http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: test
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: staticreply
                http_filters:
                  ######################################################################################################
                  - name: envoy.http.dynamic_modules
                    typed_config:
                      # Schema is defined at https://github.com/mathetake/envoy-dynamic-modules/blob/main/x/config.proto
                      "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleConfig
                      # The file_path is the path to the shared object file. We share the same file for both http filter chain.
                      file_path: main.so
                      # This is passed to newHttpFilter in main.go
                      filter_config: "headers"
                      # Since c-shared modules by the Go compiler toolchain do not support dlclose, https://github.com/golang/go/issues/11100
                      # we need to set do_not_dlclose to true to avoid the crash.
                      do_not_dlclose: true
                  ######################################################################################################
                  - name: router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    - name: listener_15003
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 15003
      filter_chains:
        - name: http
          filters:
            - name: http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: test
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: staticreply
                http_filters:
                  ######################################################################################################
                  - name: envoy.http.dynamic_modules
                    typed_config:
                      # Schema is defined at https://github.com/mathetake/envoy-dynamic-modules/blob/main/x/config.proto
                      "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleConfig
                      # The file_path is the path to the shared object file. We share the same file for both http filter chain.
                      file_path: main.so
                      # This is passed to newHttpFilter in main.go
                      filter_config: "bodies"
                      # Since c-shared modules by the Go compiler toolchain do not support dlclose, https://github.com/golang/go/issues/11100
                      # we need to set do_not_dlclose to true to avoid the crash.
                      do_not_dlclose: true
                  ######################################################################################################
                  - name: router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    - name: listener_15004
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 15004
      filter_chains:
        - name: http
          filters:
            - name: http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: test
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: staticreply
                http_filters:
                  ######################################################################################################
                  - name: envoy.http.dynamic_modules
                    typed_config:
                      # Schema is defined at https://github.com/mathetake/envoy-dynamic-modules/blob/main/x/config.proto
                      "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleConfig
                      # The file_path is the path to the shared object file. We share the same file for both http filter chain.
                      file_path: main.so
                      # This is passed to newHttpFilter in main.go
                      filter_config: "bodies_replace"
                      # Since c-shared modules by the Go compiler toolchain do not support dlclose, https://github.com/golang/go/issues/11100
                      # we need to set do_not_dlclose to true to avoid the crash.
                      do_not_dlclose: true
                  ######################################################################################################
                  - name: router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: staticreply
      type: LOGICAL_DNS
      load_assignment:
        cluster_name: staticreply
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8099
